--- a/app/package.json
+++ b/app/package.json
@@ -1,26 +1,14 @@
 {
-  "name": "client",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "apollo-boost": "^0.4.9",
-    "apollo-client": "^2.6.10",
-    "apollo-link-context": "^1.0.20",
-    "apollo-link-http": "^1.5.17",
-    "apollo-link-ws": "^1.0.20",
-    "cookie": "^0.5.0",
-    "graphql": "^16.6.0",
-    "isomorphic-unfetch": "^4.0.2",
-    "moment": "^2.29.4",
-    "next": "^13.1.1",
     "react": "^18.2.0",
-    "react-apollo": "^3.1.5",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "subscriptions-transport-ws": "^0.11.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
